--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;900&display=swap");
+
 :root {
   --color-dark: #27292a;
   --color-light: #fff;
@@ -13,8 +15,13 @@
 
   --font-weight-bold: 900;
   --font-weight-normal: 400;
+
+  --font-family-primary: "Poppins", sans-serif;
+  --font-weight-bold: 900;
+  --font-weight-normal: 400;
 }
 
 body {
   background-color: var(--color-bg-body);
+  font-family: var(--font-family-primary);
 }
